Start creating docs with swagger
